# clean-server

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  KNOWLEDGE.md  LICENSE-MIT  README.md
.claude/: settings.json  skills
.github/workflows/: ci.yml  nightly-canaries.yml  release.yml
docs/: architecture-compliance-report.md
examples/auth-demo/: README.md  app.cln
host-bridge/: Cargo.toml
host-bridge/src/: crypto.rs  db.rs  env.rs  error.rs  fs.rs  http.rs  lib.rs  log.rs  sys.rs  time.rs
host-bridge/src/wasm_linker/: array_funcs.rs  console.rs  crypto_funcs.rs  database.rs  env_time.rs  file_io.rs  helpers.rs  http_client.rs  http_server.rs  list_funcs.rs  math.rs  memory.rs  mod.rs  state.rs  string_ops.rs
scripts/: .test-policy-allowlist  check_test_policy.sh  install_hooks.sh  run_canaries.sh
scripts/hooks/: pre-commit  pre-push
src/: bridge.rs  bridge_browser_stubs.rs  bridge_canvas_stubs.rs  bridge_ui_stubs.rs  build_manifest.rs  dev_capture.rs  error.rs  error_reporting.rs  jobs.rs  lib.rs  locale.rs  main.rs  memory.rs  permissions.rs  rate_limit.rs  router.rs  runtime_config.rs  server.rs  session.rs  wasm.rs  websocket.rs
system-documents/: FIX_DB_QUERY_JSON_BUG.md  HOST_BRIDGE_INTEGRATION.md  PROMPT_FIX_ALL_MISSING_HOST_FUNCTIONS.md  PROMPT_FIX_MISSING_HOST_FUNCTIONS.md  TEST_STRATEGY.md  WASM_PARSE_DIAGNOSTICS_FOLLOWUPS.md  architecture-compliance-report.md
tests/: bridge_compliance_test.rs  bridge_contract_test.rs  canvas_stubs_test.rs  crypto_sha256_bytes_bridge_test.rs  dev_snapshot_bridge_test.rs  host_functions_test.rs  http_bridge_defaults_test.rs  jobs_bridge_test.rs  jobs_persistence_test.rs  jwt_refresh_rotation_test.rs  page_guard_redirect_test.rs  req_body_bytes_bridge_test.rs  reset_token_bridge_test.rs  server_smoke_test.rs  string_split_test.rs  ui_stubs_test.rs  wasm_alignment_test.rs
tools/: gen_browser_stubs.py  gen_canvas_stubs.py
