[package]
name = "host-bridge"
version = "1.0.0"
edition = "2021"
authors = ["Ivan Pasco"]
license = "MIT OR Apache-2.0"
description = "Host Bridge for Clean Language WASM Runtime"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
wasmtime = "26.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "mysql", "uuid", "chrono", "json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
url = "2.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"

# Crypto dependencies
bcrypt = "0.15"
argon2 = "0.5"
jsonwebtoken = "9"
base64 = "0.22"

# Filesystem dependencies
glob = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
once_cell = "1.19"
tempfile = "3.8"
base64 = "0.22"
